adicionando busca em profundidade

--- a/buscador/html/main.html
+++ b/buscador/html/main.html
@@ -24,6 +24,7 @@ Eles batalharam por horas, até que John finalmente conseguiu desferir o golpe f
 <p>Desde então, o dragão nunca mais foi visto no reino. Dizem que o espírito do dragão ainda ronda a caverna, 
 assombrando aqueles que se aproximam. Mas ninguém se atreve a chegar perto o suficiente para confirmar a história.</p>
 
-<a href="http://127.0.0.1:5500/html/main2.html">main2</a>
+<a href="http://127.0.0.1:5500/buscador/html/main2.html">main2</a>
+
 
 </html>
