--- a/buscador/html/main2.html
+++ b/buscador/html/main2.html
@@ -24,5 +24,6 @@ Eles batalharam por horas, até que John finalmente conseguiu desferir o golpe f
 <p>Desde então, o dragão nunca mais foi visto no reino. Dizem que o espírito do dragão ainda ronda a caverna, 
 assombrando aqueles que se aproximam. Mas ninguém se atreve a chegar perto o suficiente para confirmar a história.</p>
 
+<a href = "https://github.com/JoaoFilho33?tab=repositories">Git</a>
 
 </html>
