fazendo testes na função search

--- a/buscador/html/main3.html
+++ b/buscador/html/main3.html
@@ -4,7 +4,7 @@
 <title>Page <Title></Title>
 </head>
 
-<h1>Page 2</h1>
+<h1>Page 3</h1>
 <p>Era uma vez um reino distante, governado por um rei sábio e justo. 
 No reino, havia lendas sobre um dragão que vivia em uma caverna nas montanhas, causando medo e destruição por onde passava. 
 Muitos cavaleiros tentaram enfrentar o dragão, mas todos foram derrotados.</p>
@@ -25,7 +25,8 @@ Eles batalharam por horas, até que John finalmente conseguiu desferir o golpe f
 assombrando aqueles que se aproximam. Mas ninguém se atreve a chegar perto o suficiente para confirmar a história.</p>
 
 <a href = "https://github.com/JoaoFilho33?tab=repositories">Git</a>
-<a href = "http://127.0.0.1:5500/buscador/html/main3.html">page3</a>
-<a href = "http://127.0.0.1:5500/buscador/html/main.html">page1</a>
+<a href = "https://github.com/JoaoFilho33?tab=repositories">Git</a>
+<a href = "https://translate.google.com.br/?sl=en&tl=pt&text=self&op=translate">tradutor</a>
+
 
 </html>
