adicionando mecanismo de ranqueamento das páginas

--- a/buscador/html/main.html
+++ b/buscador/html/main.html
@@ -25,6 +25,8 @@ Eles batalharam por horas, até que John finalmente conseguiu desferir o golpe f
 assombrando aqueles que se aproximam. Mas ninguém se atreve a chegar perto o suficiente para confirmar a história.</p>
 
 <a href="http://127.0.0.1:5500/buscador/html/main2.html">main2</a>
+<a href = "http://127.0.0.1:5500/buscador/html/main4.html">page4</a>
+<a href = "http://127.0.0.1:5500/buscador/html/main.html">page4</a>
 
 
 </html>
