Adicionando lista dos capítulos do 'Homo deus'

--- a/exercícios/lista_05/index.html
+++ b/exercícios/lista_05/index.html
@@ -6,7 +6,7 @@
     <title>Minhas Listas Favoritas</title>
     <style>
         body {
-            background:rgba(97, 182, 182, 0.418);
+            background: rgba(97, 182, 182, 0.418);
         }
 
         h1 {
@@ -112,6 +112,33 @@
             <li class="ultrapassagem">Ultrapassagem permitida</li>
 
         </ul>
+    </div>
+
+    <h2>Homo Deus</h2>
+    <div class="quadro">
+        <ol>
+            <li>Parte I: O Homo Sapiens dá um significado ao mundo</li>
+            <ul>
+                <li>O antropoceno</li>
+                <li>A epifania humana</li>
+            </ul>
+
+            <li>O Homo Sapien dá um significado ao mundo</li>
+            <ul>
+                <li>Os contadores de histórias</li>
+                <li>O estranho casal</li>
+                <li>A aliança moderna</li>
+                <li>A revolução humanista</li>
+            </ul>
+
+            <li>O Homo Sapiens perde o controle</li>
+            <ul>
+                <li>A bomba-relógio no laboratório</li>
+                <li>O grande desacoplamento</li>
+                <li>O oceano da consciência</li>
+                <li>A religião dos dados</li>
+            </ul>
+        </ol>
     </div>
 
 </body>
