--- a/fetchAPI/frontend/index.html
+++ b/fetchAPI/frontend/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<header class="row">
 				<div>
-					<img id="redinha" src="/fetchAPI/frontend/img/redinha.jpeg">
+					<img id="redinha" src="/frontend/img/redinha.jpeg">
 					<h1>Redinha Social</h1>
 				</div>
 				<p>Fale o que quiser e escute oq nao quiser</p>
